--- a/src/App.css
+++ b/src/App.css
@@ -207,16 +207,160 @@ html {
     text-align: right;
 }
 
+/* ###### AboutSection ###### */
+
 .aboutSection {
-    background-color: chartreuse;
+    margin: 15vh 7%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.aboutSection p:nth-of-type(1) {
+    font-family: 'poppins500';
+    font-size: 1.8rem;
+    color: #EB5757;
+}
+
+.aboutSection h3 {
+    margin: 1.5vh 0;
+    width: 52%;
+}
+
+.aboutSection p:nth-of-type(2) {
+    font-family: 'poppins400';
+    font-size: 1.6rem;
+    color: #4F4F4F;
+    width: 52%;
+}
+
+.imgSection {
+    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 14vh 14vh 20vh 20vh; 
+    gap: 30px;
+}
+
+.imgSection img {
+    border-radius: 2.4rem;
+}
+
+.imgSection #c {
+    grid-row-start: 2;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-start: 2;
+}
+
+.imgSection #a {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-start: 3;
+}
+
+.imgSection #b {
+    grid-row-start: 3;
+    grid-row-end: 5;
+    grid-column-start: 2;
+    grid-column-start: 3;
+}
+
+/* ###### WorkSection ###### */
 .clientSection {
-    background-color: lightsalmon;
+    margin: 15vh 7%;
 }
 
+.clientSection h3 {
+    width: 72%;
+}
+
+.clientSection article {
+    display: flex;
+    margin: 3vh 0;
+}
+
+.clientSection article img{
+    width: 10%;
+    border-radius: 12px;
+}
+
+.clientSection div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 3vw;
+}
+
+.clientSection article p:nth-of-type(1){
+    font-family: 'poppins500';
+    font-size: 2.4rem;
+    color:#333333
+}
+
+.clientSection article p:nth-of-type(2){
+    font-family: 'poppins500';
+    font-size: 1.8rem;
+    color: #828282
+}
+
+/* ###### Footer ###### */
 .footer {
-    background-color: darkblue;
+    background-color: #100E1D;
+    display: flex;
+}
+
+.footerLinks {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    padding: 3vh 10%;
+}
+
+.footerLinks a {
+    font-family: 'poppins400';
+    font-size: 1.4rem;
+    color:#F2F2F2;
+    text-decoration: none;
+    padding: 0.5vh 0;
+}
+
+.footer article {
+    width: 15%;
+    margin: 3vh auto;
+}
+
+.footer article a {
+    padding-right: 0.5vw;
+}
+
+.footer div {
+    width: 50%;
+    padding: 3vh auto;
+    justify-self: center;
+}
+
+.footer p {
+    color:#F2F2F2;
+    font-size: 2.6rem;
+}
+
+u {
+    display: block;
+    background-color: #100E1D;
+    padding-bottom: 2vh;
+    text-align: center;
+    font-family: 'montserrat';
+    font-size: 1.2rem;
+    font-weight: 500;
+    color:#F2F2F2;
+    text-decoration: none;
+}
+
+span {
+    font-size: 1.4rem;
+    font-weight: 600;
 }
 
 /* ###### ContactComponent ###### */
@@ -251,12 +395,12 @@ html {
 .submitMail button {
     background-color: #2D9CDB;
     color: #F2F2F2;
-    margin: 3px 3px 3px 0;
+    margin: 3px 3px 3px 3px;
     font-size: 1.8rem;
     padding: 1.2rem 0;
     width: 30%;
     border: none;
-    border-radius: 1.2rem;
+    border-radius: 12px;
 }
 
 .submitMail button:hover {
